application/hello-app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app1
  labels:
    app: hello-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app1
  template:
    metadata:
      labels:
        app: hello-app1
    spec:
      containers:
      - name: hello-app1
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=Hello from App1"
        ports:
          - containerPort: 5678
