application/hello-app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app1-service
  labels:
    app: hello-app1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: hello-app1
